// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price with discount 1`] = `
<div
  className="price"
>
  <div
    className="priceWrapper"
  >
    <div
      className="current newCurrentPrice"
    >
      20 000 руб.
    </div>
    <div
      className="old"
    >
      10 000 руб.
    </div>
  </div>
</div>
`;

exports[`Price with discount tile 1`] = `
<div
  className="price priceTile"
>
  <div
    className="priceWrapper"
  >
    <div
      className="current currentTile newCurrentPrice"
    >
      20 000 руб.
    </div>
    <div
      className="old oldTile"
    >
      10 000 руб.
    </div>
  </div>
</div>
`;

exports[`Price with only current price 1`] = `
<div
  className="price"
>
  <div
    className="priceWrapper"
  >
    <div
      className="current"
    >
      20 000 руб.
    </div>
  </div>
</div>
`;

exports[`Price with only current price tile 1`] = `
<div
  className="price priceTile"
>
  <div
    className="priceWrapper"
  >
    <div
      className="current currentTile"
    >
      20 000 руб.
    </div>
  </div>
</div>
`;
